--- a/config/config.json
+++ b/config/config.json
@@ -7,15 +7,15 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "postgres",
-    "password": "Idjoel3007",
+    "username": "root",
+    "password": "",
     "database": "rsp_pool_dev",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "postgres",
-    "password": "Idjoel3007",
+    "username": "root",
+    "password": "",
     "database": "rsp_pool_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
