--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "rsp_pool",
+    "database": "rsp_pool_restapi",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "",
-    "database": "rsp_pool_dev",
+    "database": "rsp_pool_restapi_dev",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
