--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sendgrid/mail": "^7.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
