--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "rsp_pool_restapi_1",
+    "database": "rsp_pool_restapi",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
